--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-debug:1.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
+
+
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
